src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_intruction_and_expr_multiple_oubli_expr.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les and_expr
//
// Resultats:
//    Ligne 11 : Erreur ( oubli expr milieu)
//    
//
// Historique:
//    cree le 04/01/2023
{
    expression_bidon1 &&&&123 ;
}
